--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,3 +1,3 @@
 div{
-    background-color: blueviolet; padding: 10px;
+    background-color: rgb(17, 123, 68); padding: 10px; margin-bottom: 15px;
 }
